trunk/Archive2/fe/4ff0bf6c9eefeb/output
main.cpp:11:22: error: typename specifier refers to non-type member 'baz' in 'widget'
    typename widget::baz();
    ~~~~~~~~~~~~~~~~~^~~
main.cpp:6:17: note: referenced member 'baz' is declared here
    static void baz() { std::cout << "function\n"; }
                ^
1 error generated.
